--- a/Nexus/Nexus.html
+++ b/Nexus/Nexus.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Nexus </title>
 </head>
 
@@ -17,7 +18,7 @@ Nexus is an American comic book series created by writer Mike Baron and penciler
 </p><p>
 The lead character, Horatio Valdemar Hellpop, received his Nexus powers from an alien entity called the Merk. As payment, the Merk required Nexus to seek out and kill a certain quantity of human mass murderers per "cycle". When the Merk selected a target, Nexus would receive strong headaches and maddeningly anguishing dreams (whose extremely intense episodes caused physical injuries to Hellpop's body that emulated the dream violence) of his target's victims until he did his duty. Horatio was reluctant to act as the Merk's tool, but continued seeking out mass murderers to maintain his power and his sanity so that he could defend his homeworld, a lunar refuge named Ylum (a shortening of the word "asylum", thus pronounced "eye-lum").
 </p><p>
-The series debuted as a three-issue black-and-white limited series (the third of which featured a 33 RPM flexi disc with music and dialogue from the issue), followed by an ongoing full-color series which lasted 80 issues. The black-and-white issues and the first six color issues were published by Capital Comics; after Capital's demise, First Comics took over publication.
+The series debuted as a three-issue black-and-white limited series (the third of which featured a 33 RPM flexi disc with music and dialogue from the issue), followed by an ongoing full-color series which lasted 80 issues. The black-and-white issues and the first six color issues were published by Capital Comics; after Capital's demise, First Comics took over publication (issue #7).
 </p><p>
 On the creation of the series, Baron noted that they had originally pitched a series called Encyclopaedias to Capital Comics, but the company rejected this, saying they were looking for a superhero title. Over a drink at a restaurant, Baron outlined his ideas for Nexus to Rude:
 </p><p>
@@ -29,7 +30,34 @@ The current issue number was figured by continuing First Publishing's numbering,
 </p><p>
 The sequential numbering system excluded Nexus: Liberator (which neither Rude nor Baron worked on), and crossover specials with Magnus: Robot Fighter and Madman.
 </p><p>
-Baron and Rude discussed plans to either revive the series or release a movie, possibly in animated form. (A brief animated test clip was shown at comics conventions).[2] From July 2007 through July 2009 they published the miniseries Space Opera, which culminated in a double-size issue #101/102.
+Baron and Rude discussed plans to either revive the series or release a movie, possibly in animated form. (A brief animated test clip was shown at comics conventions). From July 2007 through July 2009 they published the miniseries Space Opera, which culminated in a double-size issue #101/102.
+</p><p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="Nexus001.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Nexus002.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Nexus003.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Nexus1983series001.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Nexus1983series002.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Nexus1983series003.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Nexus1983series004.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Nexus1983series005.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Nexus1983series006.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Nexus1983series007.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Nexus1983series008.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Nexus1983series009.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Nexus1983series010.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+
 </p><p>
 The creators' canonical publication list includes 105 issues:
 </p><p>
