--- a/Mystic/Mystic.html
+++ b/Mystic/Mystic.html
@@ -2,46 +2,84 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Mystic</title>
 </head>
-
 <body>
-<img src="Mystic1940series1.jpg"> <br>
-Series: 10 issues 1940. 4 issues 1944. 61 issues 1951-1957<br>
 
+<img src="Mystic1940series1.jpg"> <br>
+Series: 10 issues 1940, 4 issues 1944, 61 issues 1951-1957<br>
+Publisher: Timely, Marvel<br>
 <p>
-1940 Series by Timely, issue #1: Cover art by Alex Schomburg. <ul>
-<li>Introducing Flexo the Rubber Man, script by Will Harr, pencils by Jack Binder, inks by Jack Binder and E.C. Stoner; Brothers Joel and Joshua Williams use their creation Flexo for the first time to thwart a mad scientist who tries to steal radium from a hospital. 
-<li>The Origin of the Blue Blaze, script and art by Harry Douglas; Spencer Keen gains strength and durability after a death-like hibernation caused by a mysterious blue blaze his father had been studying. 
-<li>Journey to Cygni, script by Joe Cal Cagno, art by Fred Schwartz; Zephyr and Corky try again to reach Mars but are forced by a stowaway professor and his daughter to journey to the star Cygni instead. 
-<li>The Green Terror, script by Robert O. Erisman, art by Newt Alfred; The Green Terror, a mysterious organization, is kidnapping young, healthy men and women. 
-<li>Tough Hombre text story by Leo Stalnaker. 
-<li>The Deep Sea Demon, script by Norman Daniels, art by Fred Guardineer; Dave Dean searches for pearls but finds a mysterious demon guarding the waters. 
-<li>The Blooded Ruby of Chung; For a fee of $50,000, Dakor locates a sacred ruby stolen from a banker and returns it to the idol from which it originally came. 
-<li>The Origin of Dynamic Man, art by Daniel Peters; Professor Goettler creates Dynamic Man, a perfect man, but dies of a heart attack as his creation is born.
+Mystic Comics is the name of three comic book series published by the company that would eventually become Marvel Comics. The first two series were superhero anthologies published by Marvel's 1930-1940s predecessor, Timely Comics, during what fans and historians call the Golden Age of comic books. The third, simply titled Mystic, was a horror fiction-suspense anthology from Marvel's 1950s forerunner, Atlas Comics.
+</p><p>
+A superhero anthology with no regular starring feature, Mystic Comics introduced at least three notable characters: the Blazing Skull (issue #5, March 1941), who made appearances both in the Golden Age and in the 2000s, and the Destroyer (issue #6, Oct. 1941), noted by comics historian and former Marvel editor-in-chief Roy Thomas as "Stan's most popular superhero creation before the Fantastic Four". 
+</p><p>
+The Destroyer was cover-featured for the last half of the run. The Black Widow is comic books' first super-powered, costumed female character; She appeared in Mystic Comics #4 (Aug. 1940) and #5 (Mar. 1941), as well as #7 (Dec. 1941). An antihero who killed evildoers to deliver their souls to Satan, her master, she is unrelated to Marvel Comics' later superspy character, Black Widow.
+</p><p>
+Additional superheroes introduced in this initial series include the Thin Man, by artist Klaus Nordling and an unknown writer (issue #4, Aug. 1940); the Blue Blaze, by Harry Douglas who signed his name "Harry / Douglas" leading to much confusion and many theories over the possibility of two creators. (#1-4); the robot hero Flexo the Rubber Man (#1-4); the Black Marvel (# 5-9), by artist Al Gabriele and an unknown writer (not Stan Lee as often mis-attributed); and the Terror (# 5-10) by writer Phil Sturm and penciler Syd Shores. The non-superhero trio of detectives the 3Xs (issue # 1) comprised Timely's first team feature.
+</p><p>
+1944 Series by Timely<br>
+Timely's second series titled Mystic Comics was a shorter-lived superhero anthology that ran four issues (Oct. 1944 - March 1945). This later revival was edited by Vincent Fago as Lee had left for military duty in early 1942. Paul Gustavson's costumed detective the Angel was cover-featured for the first three, with one or two stories in each, and the Young Allies on issue #4. Timely star the Human Torch appeared in the first two issues, and time traveler Tommy Tyme in the first three. The Destroyer was the only character with a story every issue.
+</p><p>
+1951 Series by Atlas<br>
+A science fiction horror anthology. It was launched along with Strange Tales (Marvel, 1951 series), increasing Atlas's SF line from four to six books. This book ran until the collapse of Atlas's distributor and the subsequent restructuring known as the "Atlas Implosion".
+</p><p>
+
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="Mystic1940series1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Mystic1940series2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Mystic1940series3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Mystic1940series4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Mystic1940series5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Mystic1940series6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Mystic1940series7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Mystic1940series8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Mystic1940series9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Mystic1940series10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Mystic1944series1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Mystic1944series2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Mystic1944series3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Mystic1944series4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Mystic1952series1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Mystic1952series2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Mystic1952series3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Mystic1952series4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Mystic1952series5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Mystic1952series6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Mystic1952series7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Mystic1952series8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Mystic1952series9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Mystic1952series10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Mystic1952series11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Mystic1952series12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Mystic1952series13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Mystic1952series14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Mystic1952series15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Mystic1952series16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Mystic1952series17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Mystic1952series18.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Mystic1952series19.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Mystic1952series20.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+<p>
+Issues:
+<ul>
+<li><a href="Mystic1940series1.html">Mystic 1940 series #1</a></li>
+<li><a href="Mystic1944series1.html">Mystic 1944 series #1</a></li>
+<li><a href="Mystic1952series1.html">Mystic 1952 series #1</a></li>
 </ul>
-</p><p>
-<img src="Mystic1944series1.jpg">
-</p><p>
-1944 Series by Marvel, issue #1: World War II era bondage art cover by Syd Shores. <ul>
-<li>The Angel stars in "The Legend of the Murderous Falcon!" 
-<li>Human Torch in "The Mechanical Mole."
-<li>The Destroyer in "Jap Juggernaut." 
-<li>Tommy Tyme "Citizens of Ancient Rome" by Charles Tomsey. 
-<li>Terry Vance, the School Boy Sleuth in "Mystery at the Crane Mansion".
-</ul>
-</p><p>
-<img src="Mystic1952series1.jpg">
-</p><p>
-1951 Series by Atlas: SciFi Horror anthology. It was launched along with Strange Tales (Marvel, 1951 series), increasing Atlas's SF line from four to six books. This book ran until the collapse of Atlas's distributor and the subsequent restructuring known as the "Atlas Implosion".
-</p><p>
-Issue #1: <ul>
-<li>"The Man Who Vanished", art by Manny Stallman. An eight foot tall circus freak drinks a shrinking potion that continues to shrink him until he disappears. 
-<li>"The Strange Tree!" A man buys a house with a tree out in the yard which possesses people. 
-<li>The New England Horror text story. 
-<li>"Trapped in Time!" A man travels forward in time and finds that dinosaurs have again returned when man has destroyed himself through nuclear war. 
-<li>"The Hollow Men" by Mike Sekowsky. A reporter finds a scientist dead in a castle when the robot he created rebelled against him. 
 </p>
 </body>
 </html>
