--- a/Mystic/Mystic.html
+++ b/Mystic/Mystic.html
@@ -69,6 +69,36 @@ A science fiction horror anthology. It was launched along with Strange Tales (Ma
 <div class="mySlides" style="text-align: center;"><img src="Mystic1952series18.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Mystic1952series19.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Mystic1952series20.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Mystic1952series21.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Mystic1952series22.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Mystic1952series23.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Mystic1952series24.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Mystic1952series25.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Mystic1952series26.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Mystic1952series27.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Mystic1952series28.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Mystic1952series29.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Mystic1952series30.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Mystic1952series31.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Mystic1952series32.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Mystic1952series33.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Mystic1952series34.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Mystic1952series35.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Mystic1952series36.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Mystic1952series37.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Mystic1952series38.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Mystic1952series39.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Mystic1952series40.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Mystic1952series41.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Mystic1952series42.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Mystic1952series43.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Mystic1952series44.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Mystic1952series45.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Mystic1952series46.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Mystic1952series47.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Mystic1952series48.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Mystic1952series49.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Mystic1952series50.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
