--- a/Mystic/Mystic.html
+++ b/Mystic/Mystic.html
@@ -99,6 +99,17 @@ A science fiction horror anthology. It was launched along with Strange Tales (Ma
 <div class="mySlides" style="text-align: center;"><img src="Mystic1952series48.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Mystic1952series49.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Mystic1952series50.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Mystic1952series51.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Mystic1952series52.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Mystic1952series53.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Mystic1952series54.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Mystic1952series55.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Mystic1952series56.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Mystic1952series57.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Mystic1952series58.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Mystic1952series59.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Mystic1952series60.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Mystic1952series61.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
