--- a/NFAOS/NFAOS.html
+++ b/NFAOS/NFAOS.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Nick Fury Agent of SHIELD</title>
 </head>
 <body>
@@ -21,9 +22,50 @@ Nick Fury appears in several Marvel series set in alternate universes, as well a
 </p><p>
 Jackson also cameos in multiple episodes of the related Marvel television show Agents of S.H.I.E.L.D. A version of the character appearing in Marvel's Ultimate Marvel imprint was based on Jackson's appearance and screen persona, well before he was cast in the role. The recognizability of the character portrayed by Jackson in the films later led Marvel to retire the original character, replacing him with his African American son Nick Fury Jr., who like the Ultimate Marvel version is patterned on Jackson.
 </p><p>
+
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="NFAOS001.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NFAOS002.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NFAOS003.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NFAOS004.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NFAOS005.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NFAOS006.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NFAOS007.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NFAOS008.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NFAOS009.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NFAOS010.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NFAOS011.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NFAOS012.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NFAOS013.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NFAOS014.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NFAOS015.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NFAOS016.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NFAOS017.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NFAOS018.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
+
 Issues:<ul>
 <li><a href="NFAOS001.html">Issue #1 Who is Scorpio</a></li>
 
+</ul>
+Related Titles:<ul>
+<li>Nick Fury and His Agents of S.H.I.E.L.D. #1–5 (1973)</li>
+<li>Nick Fury vs. S.H.I.E.L.D. #1–6 (1988)</li>
+<li>Nick Fury, Agent of S.H.I.E.L.D. vol. 2, #1–2 (1983-1984)	Marvel</li>
+<li>Nick Fury, Agent of S.H.I.E.L.D. vol. 3, #1–47 (September 1989 - May 1993)</li>
+<li>Nick Fury's Howling Commandos #1–6 (December 2005 - May 2006)</li>
+<li><a href="https://blzimg.github.io/NickFury/NickFury.html">Nick Fury</a> 2017 Movie Style</li>
 </ul>
 </p>
 </body>
