--- a/NFAOS/NFAOS.html
+++ b/NFAOS/NFAOS.html
@@ -9,7 +9,7 @@
 <body>
 
 <img src="NFAOS001.jpg"> <br>
-Series: 1968<br>
+Series: 1968 - 1971<br>
 Publisher: Marvel<br>
 Written by Jim Steranko<br>
 Illustrations by Jim Steranko<br>
@@ -49,6 +49,13 @@ Jackson also cameos in multiple episodes of the related Marvel television show A
 <div class="mySlides" style="text-align: center;"><img src="NFAOS016.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="NFAOS017.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="NFAOS018.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NFAOS1973series1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NFAOS1973series2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NFAOS1973series3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NFAOS1973series4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NFAOS1973series5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NFAOS1983series1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NFAOS1983series2.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -61,9 +68,9 @@ Issues:<ul>
 </ul>
 Related Titles:<ul>
 <li>Nick Fury and His Agents of S.H.I.E.L.D. #1–5 (1973)</li>
-<li>Nick Fury vs. S.H.I.E.L.D. #1–6 (1988)</li>
 <li>Nick Fury, Agent of S.H.I.E.L.D. vol. 2, #1–2 (1983-1984)	Marvel</li>
-<li>Nick Fury, Agent of S.H.I.E.L.D. vol. 3, #1–47 (September 1989 - May 1993)</li>
+<li>Nick Fury, Agent of S.H.I.E.L.D. vol. 3, #1–47 (September 1988 - May 1993)</li>
+<li>Nick Fury vs. S.H.I.E.L.D. #1–6 (1988)</li>
 <li>Nick Fury's Howling Commandos #1–6 (December 2005 - May 2006)</li>
 <li><a href="https://blzimg.github.io/NickFury/NickFury.html">Nick Fury</a> 2017 Movie Style</li>
 </ul>
