--- a/LindaCarterStudentNurse/LindaCarterStudentNurse.html
+++ b/LindaCarterStudentNurse/LindaCarterStudentNurse.html
@@ -7,7 +7,6 @@
 </head>
 
 <body>
-Linda Carter Student Nurse<br>
 <img src="LindaCarterStudentNurse.jpg"> <br>
 Series: 9 issues 1961, Night Nurse 1972<br>
 Publisher: Marvel<br>
@@ -15,6 +14,8 @@ Publisher: Marvel<br>
 Linda Carter is the daughter of a doctor in Allentown, New York. After moving to New York City and moving in with roommates Christine Palmer and Georgia Jenkins, she meets and falls in love with Marshall Michaels, a wealthy businessman. When he forces her to choose between marrying him or staying at Metro General as a nurse, she chooses her career. 
 </p><p>
 In the following two issues of the series, Linda demonstrates that her skills are not limited to nursing practice, as she performs detective work to help expose an incompetent surgeon and prevents a hitman from murdering a patient. By the time the series was canceled, she had started a budding romance with Dr. Jack Tryon, a young resident doctor. 
-</p>
+</p><p>
+Related Titles:<br>
+<a href="https://blzimg.github.io/NightNurse/NightNurse.html">Night Nurse</a>
 </body>
 </html>
