--- a/DaredevilLG/DaredevilLG.html
+++ b/DaredevilLG/DaredevilLG.html
@@ -2,12 +2,13 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Daredevil</title>
 </head>
 
 <body>
-<img src="DaredevilLG001.jpg"> <img src="DaredevilLG002.jpg"><br>
+<img src="DaredevilLG001.jpg"><br>
 Series: 134 issues 1941-1956<br>
 Publisher: Lev Gleason<br>
 <p>
@@ -20,6 +21,43 @@ This original Daredevil was created by Jack Binder for an eight-page backup feat
 By this time, publisher Lev Gleason had already launched Daredevil's own comic with Daredevil Battles Hitler #1 (July 1941), in which Daredevil and other Silver Streak heroes fought the German chancellor. As with Captain America Comics #1 (March 1941), in which Hitler also gets an ignominious sock in the jaw, the comic anticipated U.S. involvement in World War II. It was written and partially drawn by Charles Biro, who continued on the book when its title changed to Daredevil Comics with issue #2, and who in his 16-year run would make the character one of the most acclaimed of the Golden Age. Biro rewrote Daredevil's origin in issue #18 (August 1943), now depicting Daredevil's real identity, Bart Hill, as having been raised by aborigines in the Australian Outback.
 </p><p>
 Biro introduced popular supporting characters the Little Wise Guys in Daredevil #13 (Oct. 1942). A "kid gang" similar to DC Comics' Newsboy Legion and many others, the group consisted of Curly, Jocko, Peewee, Scarecrow, and Meatball – the last of whom, with remarkable daring, was killed two issues later. By the late 1940s, with superheroes going out of fashion, the Little Wise Guys took center stage, edging out Daredevil altogether with issue #70 (Jan. 1950). The series lasted through #134 (Sept. 1956).
+</p><p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="DaredevilLG001.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DaredevilLG002.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DaredevilLG003.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DaredevilLG004.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DaredevilLG005.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DaredevilLG006.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DaredevilLG007.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DaredevilLG008.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DaredevilLG009.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DaredevilLG010.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DaredevilLG011.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DaredevilLG012.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DaredevilLG013.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DaredevilLG014.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DaredevilLG015.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DaredevilLG016.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DaredevilLG017.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DaredevilLG018.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DaredevilLG019.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DaredevilLG020.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DaredevilLG021.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DaredevilLG022.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DaredevilLG023.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DaredevilLG024.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
 </p>
 </body>
 </html>
