--- a/NightRider/NightRider.html
+++ b/NightRider/NightRider.html
@@ -12,7 +12,7 @@
 Series: 7 issues 1967, 6 issues 1974<br>
 Publisher: Marvel<br>
 <p>
-Ghost Rider's story continued in Western Gunfighters (Marvel, 1970 series) #1-7. Night Rider was originally called Ghost Rider, and was renamed Night Rider following the introduction of Marvel's motorcycle-riding character called Ghost Rider.
+Ghost Rider's story continued in Western Gunfighters (Marvel, 1970 series) #1-7. Night Rider was originally called Ghost Rider, and was renamed Night Rider following the introduction of Marvel's motorcycle-riding character called <a href="https://blzim.github.io/kb/Creation/GhostRider/GhostRider.html">Ghost Rider</a>.
 </p><p>
 Marvel's first Ghost Rider look was based on the Magazine Enterprises character Ghost Rider (Rex Fury), created by writer Ray Krank and artist Dick Ayers for editor Vincent Sullivan in Tim Holt #11 (1949). The character appeared in horror-themed Western stories through the run of Tim Holt, Red Mask, and A-1 Comics up until the institution of the Comics Code.
 </p><p>
