--- a/Nightcrawler/Nightcrawler.html
+++ b/Nightcrawler/Nightcrawler.html
@@ -16,7 +16,7 @@ Nightcrawler (Kurt Wagner) is a fictional superhero appearing in American comic 
 </p><p>
 Nightcrawler is a member of a fictional subspecies of humanity known as mutants, who are born with superhuman abilities. Nightcrawler possesses superhuman agility, the ability to teleport, and adhesive hands and feet. His physical mutations include indigo-colored velvety fur which allows him to become nearly invisible in shadows, two-toed feet and three-fingered hands, yellow eyes, pointed ears and a prehensile tail. In Nightcrawler's earlier comic book appearances he is depicted as being a happy-go-lucky practical joker and teaser, and a fan of swashbuckling fiction. Nightcrawler is a Catholic, and while this is not emphasized as much in his earlier comic book appearances, in later depictions Nightcrawler is more vocal about his faith.
 </p><p>
-Nightcrawler is originally stated to be from a small village called Witzeldorf in the German state of Bavaria.[1] In the X-Men animated series, it is said to be Neuherzl, and in the film X2, he makes repeated references to his time in the Munich circus, though it is never explicitly specified from where he originated.
+Nightcrawler is originally stated to be from a small village called Witzeldorf in the German state of Bavaria. In the X-Men animated series, it is said to be Neuherzl, and in the film X2, he makes repeated references to his time in the Munich circus, though it is never explicitly specified from where he originated.
 </p><p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
