--- a/SensationComics/SensationComics.html
+++ b/SensationComics/SensationComics.html
@@ -12,9 +12,10 @@
 Series: on-going<br>
 Publisher: 1942 DC<br>
 <p>
-Sensation Comics is the title of an American comic book series published by DC Comics that ran for 109 issues between 1942 and 1952. For most of its run, the lead feature was Wonder Woman, a character which had been introduced in All Star Comics #8 (December 1941). Other characters that appeared included the Black Pirate, the Gay Ghost, Mister Terrific, Wildcat, Sargon the Sorcerer, Hal Mason, the Whip, the Atom, Little Boy Blue, Hop Harrigan, Romance, Inc., Lady Danger, Doctor Pat, and Astra.
+Sensation Comics is the title of an American comic book series published by DC Comics that ran for 109 issues between 1942 and 1952. For most of its run, the lead feature was <a href="../WonderWoman/WonderWoman.html">Wonder Woman</a>, a character which had been introduced in <a href="../AllStar/AllStar.html">All Star Comics #8</a> (December 1941). Other characters that appeared included the Black Pirate, the Gay Ghost, Mister Terrific, Wildcat, Sargon the Sorcerer, Hal Mason, the Whip, the Atom, Little Boy Blue, Hop Harrigan, Romance, Inc., Lady Danger, Doctor Pat, and Astra.
 </p><p>
 The series briefly became a romance title starting with issue #94 (November 1949). Johnny Peril became the lead feature with issue #107, when the theme of the comic changed to a supernatural/mystery format. The title was changed to Sensation Mystery with #110 and ran for another seven issues. The retitled series ended with issue #116 (July–August 1953).
+</p><p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
 </div> </div>
