--- a/WonderWoman/WonderWoman.html
+++ b/WonderWoman/WonderWoman.html
@@ -2,38 +2,79 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Wonder Woman</title>
 </head>
 
 <body>
-<h2>Wonder Woman</h2>
 <img src="WonderWoman001.jpg"> <br>
 Writer: William Moulton Marston<br>
 Illustrator: Harry G. Peter<br>
-Series: on-going<br>
-Publisher: 1941 DC<br>
+Series: 329 issues 1942 - 1986, 228 issues 1987 - 2006, 60 issues 2006 - 2011, 55 issues 2011 - 2016, 5 issues 2017 - present.<br>
+Publisher: DC<br>
 <p>
-Wonder Woman is a fictional superhero appearing in American comic books published by DC Comics. The character is a founding member of the Justice League, goddess, and Ambassador-at-Large of the Amazon people. The character first appeared in <a href="../AllStar/AllStar.html">All Star Comics #8</a> in October 1941 and first cover-dated on <a href="../SenstationComics/SensationComics.html">Sensation Comics #1</a>, January 1942. In her homeland, the island nation of Themyscira, her official title is Princess Diana of Themyscira, Daughter of Hippolyta. When blending into the society outside of her homeland, she adopts her civilian identity Diana Prince. The character is also referred to by such epithets as the "Amazing Amazon", the "Spirit of Truth", "Themyscira's Champion", the "God-killer", and the "Goddess of Love and War".
+Wonder Woman is a fictional superhero appearing in American comic books published by DC Comics. The character is a founding member of the Justice League, goddess, and Ambassador-at-Large of the Amazon people. The character first appeared in <a href="../AllStar/AllStar.html">All Star Comics #8</a> in October 1941 and first cover-dated on <a href="../SensationComics/SensationComics.html">Sensation Comics #1</a>, January 1942. In her homeland, the island nation of Themyscira, her official title is Princess Diana of Themyscira, Daughter of Hippolyta. When blending into the society outside of her homeland, she adopts her civilian identity Diana Prince. The character is also referred to by such epithets as the "Amazing Amazon", the "Spirit of Truth", "Themyscira's Champion", the "God-killer", and the "Goddess of Love and War".
 </p><p>
 Wonder Woman was created by the American psychologist and writer William Moulton Marston (pen name: Charles Moulton), and artist Harry G. Peter. Olive Byrne, Marston's lover, and his wife, Elizabeth, are credited as being his inspiration for the character's appearance. Marston drew a great deal of inspiration from early feminists, and especially from birth control pioneer Margaret Sanger; in particular, her piece "Woman and the New Race". The character first appeared in All Star Comics #8 in October 1941 and first cover-dated on Sensation Comics #1, January 1942. The Wonder Woman title has been published by DC Comics almost continuously except for a brief hiatus in 1986.
 </p><p>
 Wonder Woman's origin story relates that she was sculpted from clay by her mother Queen Hippolyta and given life by Aphrodite, along with superhuman powers as gifts by the Greek gods. In recent years, DC changed her background with the revelation that she is the daughter of Zeus and Hippolyta, jointly raised by her mother and her aunts Antiope and Menalippe. In the 1980s artist George Perez gave her a muscular look and emphasized her Amazonian heritage. Wonder Woman's Amazonian training helped to develop a wide range of extraordinary skills in tactics, hunting, and combat. She possesses an arsenal of advanced technology, including the Lasso of Truth, a pair of indestructible bracelets, a tiara which serves as a projectile, and, in older stories, a range of devices based on Amazon technology. 
 </p><p>
 Wonder Woman's character was created during World War II; the character in the story was initially depicted fighting Axis military forces as well as an assortment of colorful super villains, although over time her stories came to place greater emphasis on characters, deities, and monsters from Greek mythology. Many stories depicted Wonder Woman rescuing herself from bondage, which defeated the "damsels in distress" trope that was common in comics during the 1940s. In the decades since her debut, Wonder Woman has gained a cast of enemies bent on eliminating the Amazon, including classic villains such as Ares, Cheetah, Doctor Poison, Circe, Doctor Psycho, and Giganta, along with more recent adversaries such as Veronica Cale and the First Born. Wonder Woman has also regularly appeared in comic books featuring the superhero teams Justice Society (from 1941) and Justice League (from 1960).
+</p><p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman001.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman002.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman003.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman004.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman005.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman006.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman007.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman008.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman009.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman010.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman011.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman012.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman013.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman014.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman015.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman016.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman017.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman018.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman019.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman020.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman021.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman022.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman023.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman024.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman025.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman026.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman027.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman028.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman029.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman030.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman031.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman032.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman033.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman034.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman035.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman036.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman037.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman038.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman039.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman040.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
 </p>
-Issues:<ul>
-<li><a href="WonderWoman.html">Wonder Woman #1</a></li>
-<li><a href="WonderWoman2.html">Wonder Woman #2</a></li>
-<li><a href="WonderWoman3.html">Wonder Woman #3</a></li>
-<li><a href="WonderWoman4.html">Wonder Woman #4</a></li>
-<li><a href="WonderWoman5.html">Wonder Woman #5</a></li>
-<li><a href="WonderWoman6.html">Wonder Woman #6</a></li>
-<li><a href="WonderWoman7.html">Wonder Woman #7</a></li>
-<li><a href="WonderWoman8.html">Wonder Woman #8</a></li>
-<li><a href="WonderWoman9.html">Wonder Woman #9</a></li>
-<li><a href="WonderWoman10.html">Wonder Woman #10</a></li>
-</ul>
 
 </body>
 </html>
