--- a/WonderWoman/WonderWoman.html
+++ b/WonderWoman/WonderWoman.html
@@ -70,6 +70,26 @@ Wonder Woman's character was created during World War II; the character in the s
 <div class="mySlides" style="text-align: center;"><img src="WonderWoman038.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="WonderWoman039.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="WonderWoman040.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman041.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman042.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman043.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman044.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman045.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman046.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman047.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman048.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman049.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman050.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman051.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman052.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman053.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman054.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman055.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman056.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman057.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman058.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman059.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman060.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
