--- a/WonderWoman/WonderWoman.html
+++ b/WonderWoman/WonderWoman.html
@@ -90,6 +90,46 @@ Wonder Woman's character was created during World War II; the character in the s
 <div class="mySlides" style="text-align: center;"><img src="WonderWoman058.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="WonderWoman059.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="WonderWoman060.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman061.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman062.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman063.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman064.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman065.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman066.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman067.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman068.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman069.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman070.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman071.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman072.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman073.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman074.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman075.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman076.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman077.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman078.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman079.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman080.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman081.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman082.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman083.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman084.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman085.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman086.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman087.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman088.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman089.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman090.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman091.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman092.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman093.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman094.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman095.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman096.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman097.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman098.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman099.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WonderWoman100.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
